--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "concurrently": "^9.1.2"
+    "@types/pg": "^8.15.4",
+    "concurrently": "^9.1.2",
+    "drizzle-kit": "^0.31.1",
+    "drizzle-orm": "^0.44.1",
+    "pg": "^8.16.0"
   },
   "peerDependencies": {
     "typescript": "^5"
