--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "concurrently": "^9.1.2"
+    "concurrently": "^9.1.2",
+    "drizzle-kit": "^0.31.1"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.44.2",
+    "pg": "^8.16.0"
+  }
 }
