--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@trpc/server": "^11.3.1",
     "hono": "^4.7.11"
   },
   "devDependencies": {
