--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,9 +5,14 @@
   },
   "dependencies": {
     "@trpc/server": "^11.3.1",
-    "hono": "^4.7.11"
+    "better-auth": "^1.2.8",
+    "drizzle-orm": "^0.44.2",
+    "hono": "^4.7.11",
+    "postgres": "^3.4.7"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/pg": "^8.15.4",
+    "drizzle-kit": "^0.31.1"
   }
 }
