chore: nuevas dependencias

--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -12,8 +12,8 @@
 
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-
+    "lib": ["esnext", "dom"],
     "types": ["bun"]
   },
-  "include": ["src"]
+  "include": ["src", "auth.ts"]
 }
