--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,12 +1,13 @@
 {
   "name": "server",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot api/index.ts"
   },
   "dependencies": {
     "hono": "^4.7.11"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "typescript": "^5.4.0"
   }
 }
