--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "server/src/index.ts",
+      "src": "src/index.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "server/src/index.ts"
+      "dest": "src/index.ts"
     }
   ]
 }
