--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -22,9 +22,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-query": "^5.80.7",
     "@tanstack/react-router": "^1.120.13",
     "@tanstack/react-router-devtools": "^1.120.13",
     "@tanstack/react-table": "^8.21.3",
+    "@trpc/client": "^11.4.1",
+    "@trpc/tanstack-react-query": "^11.4.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
