--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,6 +8,7 @@
     "@hono/node-server": "^1.14.4",
     "@hono/trpc-server": "^0.3.4",
     "@trpc/server": "^11.4.0",
+    "@types/pg": "^8.15.4",
     "bcrypt": "^6.0.0",
     "better-auth": "^1.2.9",
     "dotenv": "^16.5.0",
