--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,7 +2,8 @@
   "name": "server",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts --outdir dist --format esm"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
