--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --format esm"
+    "build": "bun build src/index.ts --outdir dist --format esm --target node"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
