--- a/apps/server/vercel.json
+++ b/apps/server/vercel.json
@@ -1,16 +1,6 @@
 {
   "installCommand": "bun install",
-  "buildCommand": "bun build src/index.ts --outdir dist --format esm",
-  "builds": [
-    {
-      "src": "dist/index.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "dist/index.js"
-    }
-  ]
+  "buildCommand": "bun build src/index.ts --outdir dist --format esm --target node",
+  "builds": [{ "src": "dist/index.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "dist/index.js" }]
 }
