--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -2,8 +2,7 @@
   "name": "server",
   "type": "module",
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --outdir dist --format esm --target node"
+    "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
     "@hono/node-server": "^1.14.4",
