--- a/apps/server/tsconfig.json
+++ b/apps/server/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES2020",
+    "module": "commonjs",
     "moduleResolution": "node",
+    "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true
   },
+  "include": ["src", "api"],
 }
