--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -17,6 +17,7 @@
     "hono": "^4.7.11",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
+    "vercel": "^32.4.1",
     "zod": "^3.25.63"
   },
   "devDependencies": {
