feat(api): betterauth funcionando en produccion

--- a/apps/truckly-hono-api/package.json
+++ b/apps/truckly-hono-api/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@neondatabase/serverless": "^1.0.1",
+    "better-auth": "^1.2.9",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11"
